--- a/windows-node/Deploiment_Ansible/hosts.ini
+++ b/windows-node/Deploiment_Ansible/hosts.ini
@@ -1,5 +1,5 @@
 [win]
-#win2019
+win2019
 win2022
 
 [win2019]
@@ -16,7 +16,7 @@ ansible_user=root
 
 [win:vars]
 ansible_user=Administrateur
-ansible_password=CSgr0up*
+ansible_password=AZERTY
 ansible_port=5986
 ansible_connection=winrm
 ansible_winrm_server_cert_validation=ignore
